# Penrose

./: .gitignore  Cargo.toml  README.md  index.css  index.html  penrose.js
pkg/: package.json  penrose_tiling.js  penrose_tiling_bg.wasm  without_a_bundler.d.ts  without_a_bundler.js  without_a_bundler_bg.wasm  without_a_bundler_bg.wasm.d.ts
src/: lib.rs
