[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
num = "0.4.0"
time = "0.3.15"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'console',
  'Performance', 
  'PerformanceTiming'
]